envoy-gateway-demo.yml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: envoy-class-gateway
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
  #parametersRef:
  #  group: gateway.envoyproxy.io
  #  kind: EnvoyProxy
  #  name: nodeport-config
  #  namespace: envoy-gateway-system
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: example-gateway
spec:
  gatewayClassName: envoy-class-gateway
  listeners:
    - name: http
      protocol: HTTP
      port: 8000
      #allowedRoutes:
      #  namespaces:
      #    from: All
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: example-httproute
spec:
  parentRefs:
    - name: example-gateway
  hostnames:
    - "www.example.com"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: gateway-service
          port: 8000
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
  labels:
    app: gateway-demo
    service: gateway
spec:
  ports:
    - name: http
      port: 8000
      targetPort: 8000
  selector:
    app: gateway-demo
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gateway-demo
  template:
    metadata:
      labels:
        app: gateway-demo
        version: v1
    spec:
      containers:
        - name: gateway-container
          image: jdhet/fastapi-argo:shaf86cfbdf7fadb0896809044b5c598ed8e79b409f
          # image: docker.io/jdhet/fastapi-argo:latest
          ports:
            - containerPort: 8000
          resources:
            requests: { cpu: "100m", memory: "128Mi" }        # Minimum CPU required (IMPORTANT for HPA)
            limits: { cpu: "500m", memory: "512Mi" }
---
# canary deployment - 1 replica
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-deployment-canary
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway-demo
  template:
    metadata:
      labels:
        app: gateway-demo
        version: v2
    spec:
      containers:
        - name: gateway-container
          image: docker.io/jdhet/fastapi-argo:latest
          ports:
            - containerPort: 8000
          resources:
            requests: { cpu: "100m", memory: "128Mi" }        # Minimum CPU required (IMPORTANT for HPA)
            limits: { cpu: "500m", memory: "512Mi" }
